# yalc

./: .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  TESTING.md  pyproject.toml
.github/workflows/: pre-commit.yml
scripts/: check_models.py
src/: __init__.py
src/clients/: client.py  client_factory.py  schemas.py  strategy.py
src/clients/provider_clients/: anthropic.py  openai.py
src/common/: pricing.py  utils.py
tests/integration/: conftest.py  fake_client.py  test_anthropic_client.py  test_client.py  test_client_factory.py  test_openai_client.py
yalc/: __init__.py
yalc/clients/: client.py  client_factory.py  schemas.py  strategy.py
yalc/clients/provider_clients/: anthropic.py  openai.py
yalc/common/: pricing.py  schemas.py  utils.py
