[project]
name = "yalc"
version = "0.1.1"
description = "Yet Another LLM Client"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cachetools>=6.2.6",
    "instructor[anthropic]>=1.14.5",
    "litellm>=1.81.6",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "types-cachetools>=6.2.0.20251022",
]

[tool.mypy]
plugins = [
    "pydantic.mypy"
]

[tool.ruff]
line-length = 70
